# SDL-OpenGL-Examples

./: CMakeLists.txt  README.md
Lesson1/: CMakeLists.txt  lesson1.cpp
Lesson2/: CMakeLists.txt  lesson2.cpp
Lesson3/: CMakeLists.txt  lesson3.cpp
Lesson4/: CMakeLists.txt  lesson4.cpp
include/: Cleanup.h  Timer.h
src/: Timer.cpp
